--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,29 +3,11 @@
     <div id='bump'>
         <section class="article archive">
           <article class="archive-wrap">
-            <p class="intro">I'm an incoming Postdoctoral Research Scientist at Columbia University Irving Medical Center, focused on machine learning for women's health and health disparity.<br><br>
-            <a id="mail" href="mailto:altosaar@princeton.edu?subject=Inquiry">Get in touch</a> if you want to discuss an idea or grab a (physically-distanced; virtual) coffee; subscribe to my <a href="http://tinyletter.com/altosaar">mailing list</a> for updates on blog posts.</p>
-            <!-- <img id="jathumb" src="images/jathumb.jpg"/> -->
-            <!-- <figure><img src="/images/jathumb.jpg" /></figure> -->
-            <figure><center><img src="/images/ja-thumb-new.png" /></center></figure>
-<!--             <br>
-            <br>
-              <ol class="post-list">
-                  <lh style="text-align: center"><h2><span class="bb"><a href="/">{{ page.title }}</a></span></h2></lh>
-                  {% for post in site.posts limit:5 %}
-                  <li>
-                     <a href="{{ site.url }}{{ post.url }}">
-                     <div class="featured-image-small" style="background-image: url({{ site.url }}/images/{{ post.image.thumb }})">
-                     </div>
-                     </a>
-                     <div class="deets left-slide" itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-                     <h1><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h1>
-                     {% if post.modified %}<p class="date"><span class="date"><time datetime="{{ page.modified }}" itemprop="dateModified">Updated on {{ post.modified | date: "%B %d, %Y" }}</time></span>{% else %}<p class="date"><time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">{{ post.date | date: "%B %d, %Y" }}</time>{% endif %}</p>
-                     <p class="summary">{% if post.description %}{{ post.description  | strip_html | strip_newlines | truncate: 120 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
-                     </div>
-                  </li>
-                  {% endfor %}
-              </ol> -->
+            <p class="intro">I'm a Computer Science MSci student passionate about machine learning.  Nowadays I work in NLP/NLU, Dialogue Systems, Text Mining, and Health Applications.  I'm dedicated in encourage girls in STEM careers. That's why I’m actively involved in an ONG that empowers girls and teaches them programming abilities to lower the gender gap in STEM careers, check it out<a id="ninas" href="https://ninaspro.cl/">Niñas Pro</a>.<br><br>
+            <a id="mail" href="mailto:adaldunate@miuandes.cl">Get in touch</a> to talk about ML, NLP, climbing in Chile, Patagonia, cute fat cats, or anything!</p>
+
+            <figure><center><img src="/images/angeles.png" /></center></figure>
+
           </article>
         </section>
     </div>
