--- a/_layouts/papers.html
+++ b/_layouts/papers.html
@@ -30,14 +30,18 @@
                         <a href="{{ paper.arxiv }}"><i class="fas fa-book-dead"></i> arXiv</a>
                         &ensp;
                         {% endif %}
+                        {% if paper.pdf %}
                         <a href="/papers/{{ paper.pdf }}"><i class="far fa-file-pdf"></i> PDF</a>
                         &ensp;
+                        {% endif %}
                         {% if paper.code %}
                         <a href="{{ paper.code }}"><i class="fab fa-github"></i> Code</a>
                         &ensp;
                         {% endif %}
+                        {% if paper.bibtex %}
                         <button class="btn" clipboard="{{ paper.bibtex }}"><i class="fas fa-quote-left"></i> Copy BibTex</button>
                         &ensp;
+                        {% endif %}
                         {% if paper.slides %}
                         <a href="/talks/{{ paper.slides }}"><i class="fas fa-chalkboard-teacher"></i> Slides</a>
                         &ensp;
