--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
     <div id='bump'>
         <section class="article archive">
           <article class="archive-wrap">
-            <p class="intro">I'm a Computer Science Master student passionate about machine learning. Nowadays I work in NLP/NLU, Dialogue Systems, Text Mining, and Health Applications. I'm dedicated in encourage girls in STEM careers. That's why I’m actively involved in an ONG that empowers girls and teaches them programming abilities to lower the gender gap in STEM careers, check it out <a id="ninas" href="https://ninaspro.cl/">Niñas Pro</a>.<br><br>
+            <p class="intro">I'm a Computer Science Master student passionate about machine learning. Nowadays I work in NLP/NLU, Dialogue Systems, Text Mining, and Health Applications. I'm dedicated in encourage girls in STEM. That's why I’m actively involved in an ONG that empowers girls and teaches them programming abilities to lower the gender gap in STEM careers, check it out <a id="ninas" href="https://ninaspro.cl/">Niñas Pro</a>.<br><br>
             <a id="mail" href="mailto:adaldunate@miuandes.cl">Get in touch</a> to talk about ML, NLP, climbing in Chile, Patagonia, cute fat cats, or anything!</p>
 
             <figure><center><img src="/images/angeles.png" /></center></figure>
